[LPF-816]: Mockito Compatibility in Tests (#32)